# runwatch

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  MANIFEST.in  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: quality-gate.yml  release.yml  tests.yml
agent_skills/: install_skills.py
agent_skills/runwatch/: SKILL.md
agent_skills/runwatch/agents/: openai.yaml
agent_skills/runwatch/references/: cli-and-emitters.md
agent_skills/runwatch/scripts/: runwatch_skill_probe.py
docs/: api.md  architecture.md  conf.py  index.md  quality-gates.md  releasing.md  resource-events.md  security.md
scripts/: check_api_docs.py  check_cognitive_complexity.py  check_config_syntax.py  check_file_hygiene.py  check_github_workflows.py  check_quality_gate_parity.py  check_release.py  check_skill.py  check_wheel.py  clean_local_state.py  install_skills.py  resolve_notebook_workspace.sh  run_active_notebook.sh  run_agent_skill_probes.py
src/runwatch/: __init__.py  __main__.py  _cli_entrypoint.py  _compat.py  _eta.py  _fs.py  _notebook_snapshot.py  _sleep_inhibition.py  _tqdm.py  adapters.py  aws.py  cli.py  cli_presentation.py  config.py  dashboard_links.py  default_config.yaml  egress.py  emit.py  events.py  local.py  manifest.py  models.py  notebook.py  notification_config.py  notification_presentation.py  notifications.py  protocol_validation.py  resource_manager.py  schema_versions.py  storage.py  supervisor.py  tunnel.py  validation.py  web.py
src/runwatch/resources/: __init__.py  base.py  cloudwatch.py  cloudwatch_logs.py  dashboard.py  local.py  s3.py  s3_manifest.py  sagemaker.py
tests/: test_adapter_registry.py  test_cli.py  test_cloudwatch_logs_adapter.py  test_cloudwatch_metric_adapter.py  test_config_validation.py  test_dashboard_adapter.py  test_dashboard_links.py  test_emit.py  test_eta.py  test_fake_session_launcher.py  test_local_adapters.py  test_notebook_runner.py  test_notebook_snapshot.py  test_notifications.py  test_release.py  test_resource_manager.py  test_s3_manifest_adapter.py  test_s3_prefix_adapter.py  test_sagemaker_adapter.py  test_skill_installer.py  test_sleep_inhibition.py  test_storage.py  test_supervisor.py  test_tqdm_integration.py  test_tunnel.py  test_web.py
typings/boto3/: __init__.pyi
typings/botocore/: __init__.pyi  config.pyi  exceptions.pyi
typings/nbformat/: __init__.pyi  notebooknode.pyi
typings/nbformat/v4/: __init__.pyi
typings/pynvml/: __init__.pyi
web_artifacts/common/: neumorphic-gloss-components.css
web_artifacts/runwatch/: app.js  index.html  notebook.html  notebook.js  styles.css
web_artifacts/runwatch/mascot/: phrases.json
web_artifacts_fake_sessions/: README.md
web_artifacts_fake_sessions/runwatch/: README.md  linked_dashboard.html  pyrightconfig.json  run.py  run.sh  runwatch.yaml  session.ipynb
