[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "runwatch-notebook"
version = "0.2.0"
description = "Durable notebook execution with typed resource monitoring and a mobile dashboard"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Agustín Sellanes"}]
keywords = ["jupyter", "notebook", "nbclient", "monitoring", "aws"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "pydantic>=2.6,<3",
]

[project.optional-dependencies]
supervisor = [
    "async-timeout>=5",
    "boto3>=1.34",
    "beautifulsoup4>=4.12",
    "fastapi>=0.110",
    "httpx>=0.27",
    "jinja2>=3.1",
    "jupyter-client>=8.9.1",
    "nbclient>=0.10.4,<0.12",
    "nbconvert>=7.17.1,<8",
    "nbformat>=5.10,<6",
    "numpy>=1.26,<3",
    "psutil>=5.9",
    "pyyaml>=6",
    "qrcode>=7.4",
    "typer>=0.12",
    "uvicorn[standard]>=0.27",
    "websockets>=12",
]
gpu = ["nvidia-ml-py>=12"]
test = [
    "ipykernel>=7.3",
    "pytest>=7",
    "pytest-asyncio>=0.21",
    "pytest-cov>=5",
    "tqdm>=4.66,<5",
]
dev = [
    "black>=22",
    "build>=1",
    "flake8>=7.1",
    "flake8-cognitive-complexity>=0.1",
    "pre-commit>=2.17",
    "pyright>=1.1.409,<2",
    "ruff>=0.4",
    "pyyaml>=6",
    "types-PyYAML>=6.0.12,<7",
]
docs = [
    "myst-parser>=4",
    "pydata-sphinx-theme>=0.16",
    "sphinx>=8",
    "sphinx-autodoc-typehints>=3",
    "sphinx-copybutton>=0.5",
]

[project.urls]
Homepage = "https://github.com/EssenceSentry/runwatch"
Repository = "https://github.com/EssenceSentry/runwatch"
Documentation = "https://essencesentry.github.io/runwatch/"
"Bug Tracker" = "https://github.com/EssenceSentry/runwatch/issues"

[project.scripts]
runwatch = "runwatch._cli_entrypoint:main"

[project.entry-points."runwatch.adapters"]
"aws.sagemaker_processing_job" = "runwatch.resources.sagemaker:SageMakerProcessingAdapter"
"aws.s3_prefix" = "runwatch.resources.s3:S3PrefixAdapter"
"aws.s3_manifest" = "runwatch.resources.s3_manifest:S3ManifestAdapter"
"aws.cloudwatch_metric" = "runwatch.resources.cloudwatch:CloudWatchMetricAdapter"
"aws.cloudwatch_logs" = "runwatch.resources.cloudwatch_logs:CloudWatchLogsAdapter"
"local.dashboard" = "runwatch.resources.dashboard:DashboardAdapter"
"local.system_metrics" = "runwatch.resources.local:SystemMetricsAdapter"
"local.file_count" = "runwatch.resources.local:FileCountAdapter"
"local.line_count" = "runwatch.resources.local:LineCountAdapter"

[tool.setuptools.packages.find]
where = ["src"]
include = ["runwatch*"]

[tool.setuptools.package-data]
runwatch = ["py.typed", "*.yaml"]

[tool.setuptools.data-files]
"share/runwatch/web_artifacts/common" = [
    "web_artifacts/common/neumorphic-gloss-components.css",
]
"share/runwatch/web_artifacts/runwatch" = [
    "web_artifacts/runwatch/index.html",
    "web_artifacts/runwatch/notebook.html",
    "web_artifacts/runwatch/notebook.js",
    "web_artifacts/runwatch/app.js",
    "web_artifacts/runwatch/styles.css",
]
"share/runwatch/web_artifacts/runwatch/mascot" = [
    "web_artifacts/runwatch/mascot/alert.png",
    "web_artifacts/runwatch/mascot/confused.png",
    "web_artifacts/runwatch/mascot/inspecting.png",
    "web_artifacts/runwatch/mascot/phrases.json",
    "web_artifacts/runwatch/mascot/ready.png",
    "web_artifacts/runwatch/mascot/running.png",
    "web_artifacts/runwatch/mascot/sleeping.png",
    "web_artifacts/runwatch/mascot/success.png",
    "web_artifacts/runwatch/mascot/waiting.png",
]

[tool.black]
line-length = 88
target-version = ["py310"]
include = "\\.pyi?$"
extend-exclude = """
/(
  \\.eggs
  | \\.git
  | \\.mypy_cache
  | \\.tox
  | \\.venv
  | \\.build
  | build
  | dist
)/
"""

[tool.ruff]
target-version = "py310"
line-length = 88
exclude = ["typings"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"

[tool.coverage.run]
branch = true
source = ["runwatch"]

[tool.coverage.report]
show_missing = true
skip_covered = false
